--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.8.11 (https://fiko.rokma.rocks)
+* FIKO 🐸 v0.9.0 (https://fiko.rokma.rocks)
 * 2024 BLACK & WHITE CSS FRAMEWORK LIBRARY
-* Copyright 2023 Toybreaker
+* Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
 *
 * WHY? TLDR:
@@ -1962,7 +1962,7 @@
 
   article:not(:only-child) {
     margin-block: var(--spaceTB);
-    margin-inline: var(--spaceLR);
+    /* margin-inline: var(--spaceLR); */
   }
 
   /*!
