small fixes for flexbox | v0.9.2

--- a/package/modules/6containers.css
+++ b/package/modules/6containers.css
@@ -76,7 +76,7 @@
 
   nav[aria-label='breadcrumb'] {
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
   }
 
   nav[aria-label='breadcrumb'] ul li:not(:first-child) {
