--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.9.0 (https://fiko.rokma.rocks)
+* FIKO 🐸 v0.9.2 (https://fiko.rokma.rocks)
 * 2024 BLACK & WHITE CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -256,12 +256,7 @@
     --rad: clamp(6.66px, 1svw, 8px); /* RADIUS */
     --lineH: 1.55; /* LINE HEIGHT */
     --borderS: clamp(1.5px, 1svw, 2px); /* BORDER SIZE */
-    /* --borderS: 1px; */
-
-    /* NOTE: Maybe make DERIVED?: */
     --gap: calc((var(--spaceLR) + var(--spaceTB)) / 3);
-
-    /* TRANSITIONS */
     --transition: 0.2s ease-in-out;
 
     /* TYPOGRAPHY */
@@ -1107,7 +1102,7 @@
 
   nav[aria-label='breadcrumb'] {
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
   }
 
   nav[aria-label='breadcrumb'] ul li:not(:first-child) {
