--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.9.9 (https://fiko.rokma.rocks)
-* 2024 BLACK & WHITE CSS FRAMEWORK LIBRARY
+* FIKO 🐸 v0.10.0
+* 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
 *
