--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.10.5
+* FIKO 🐸 v0.10.6
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -289,6 +289,7 @@
     );
 
     --font-weight: 300;
+    --font-weight-bold: 500;
 
     /* LONG TEXT LINE ARE HARD TO READ */
     --reading: 60ch;
@@ -353,7 +354,7 @@
   /* TYPOGRAPHY */
   b,
   strong {
-    font-weight: bolder;
+    font-weight: var(--font-weight-bold);
   }
 
   sub,
