--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* FIKO 🐸 v0.10.6
+* FIKO 🐸 v0.10.7
 * 2024 CSS FRAMEWORK LIBRARY
 * Copyright 2023-2024 Toybreaker
 * MIT License | https: //github.com/toybreaker/fiko
@@ -291,7 +291,7 @@
     --font-weight: 300;
     --font-weight-bold: 500;
 
-    /* LONG TEXT LINE ARE HARD TO READ */
+    /* LONG TEXT LINES ARE HARD TO READ */
     --reading: 60ch;
 
     /* MORE ICONS */
@@ -2074,7 +2074,7 @@
     }
 
     .full_window {
-      height: 100svh;
+      min-height: 100svh;
       width: 100svw;
     }
 
